--- a/yew-macro/Cargo.toml
+++ b/yew-macro/Cargo.toml
@@ -11,8 +11,8 @@ keywords = ["web", "wasm", "frontend", "webasm", "webassembly"]
 categories = ["gui", "web-programming", "wasm"]
 description = "A framework for making client-side single-page apps"
 
-[lib]
-proc-macro = true
+# [lib]
+# proc-macro = true
 
 [dependencies]
 boolinator = "2.4.0"
